<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTopBtn"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:onClick="editFencer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainScndBtn"
        android:id="@+id/button2"
        android:layout_marginBottom="67dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button3"
        android:onClick="placeholderClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainThrdBtn"
        android:id="@+id/button3"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:onClick="placeholderClick"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainFrthBtn"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="83dp"
        android:onClick="placeholderClick"/>
</RelativeLayout>